Build and release APK version 0.0.7 on 20250221_2346

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">locket_upload</string>
+    <string name="CodePushDeploymentKey">X_gWZ6w023OX_s32KItOkndwovTe_OvbpfyYgk</string>
 </resources>
