--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">locket_upload</string>
-    <string name="CodePushDeploymentKey">X_gWZ6w023OX_s32KItOkndwovTe_OvbpfyYgk</string>
+    <string name="app_name">locket upload</string>
+    <string name="CodePushDeploymentKey">iBfzrBb1TTD1jZyazQKslU4Wr7WC4ksvOXqog</string>
+    <string name="CodePushServerUrl">https://code-push.quockhanh020924.id.vn</string>
 </resources>
