--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -106,5 +106,6 @@
   "change_app_icon": "Change app icon",
   "no_activity_yet": "No activity yet!",
   "activity": "Activity",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "skip_this_version": "Skip this version"
 }
