--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -101,11 +101,12 @@
   "language": "Ngôn ngữ",
   "phone_not_accepted": "Số điện thoại không hợp lệ",
   "thank_for_use_my_app": "Cảm ơn bạn đã sử dụng ứng dụng của mình",
-  "donate": "App này mình làm đam mê là chính, nếu bạn thấy hay thì mời mình ly cà phê để mình có động lực chiến tiếp nha! ☕❤️",
+  "donate": "App này mình làm hoàn toàn MIỄN PHÍ vì đam mê là chính, nếu bạn thấy hay thì mời mình ly cà phê để mình có động lực chiến tiếp nha! ☕❤️",
   "copyed": "Đã sao chép \"0382914192\" vào bộ nhớ đệm",
   "change_app_icon": "Đổi biểu tượng ứng dụng",
   "no_activity_yet": "Chưa có hoạt động nào!",
   "activity": "Hoạt động",
   "loading": "Đang tải...",
-  "skip_this_version": "Bỏ qua phiên bản này"
+  "skip_this_version": "Bỏ qua phiên bản này",
+  "can_close_after": "Bạn có thể đóng sau"
 }
