Thêm option ẩn thông báo donate

--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -108,5 +108,6 @@
   "activity": "Hoạt động",
   "loading": "Đang tải...",
   "skip_this_version": "Bỏ qua phiên bản này",
-  "can_close_after": "Bạn có thể đóng sau"
+  "can_close_after": "Bạn có thể đóng sau",
+  "hide_donate": "Ẩn thông báo quyên góp"
 }
