--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -108,5 +108,14 @@
   "activity": "Activity",
   "loading": "Loading...",
   "skip_this_version": "Skip this version",
-  "can_close_after": "You can close after"
+  "can_close_after": "You can close after",
+  "chat": "Chat",
+  "new_message": "⬇ New message",
+  "not_thing_here": "Not thing here",
+  "loading_message": "Loading message...",
+  "type_message": "Type message...",
+  "copy": "Copy",
+  "delete": "Delete",
+  "hide_donate": "Hide popup donate",
+  "how_to_hide_popup_donate": "You can go to app settings to hide this notification"
 }
