Cho phép thay đổi ngôn ngữ khi login, setup account demo để đội ngũ Spotify kiểm tra app

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -123,5 +123,6 @@
   "email_login": "The email you use to log in",
   "active_key": "Activation Key",
   "active_key_description": "Enter the activation code for your email",
-  "get_acitve_key": "Get Activation Key"
+  "get_acitve_key": "Get Activation Key",
+  "password": "Password"
 }
