--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -123,5 +123,6 @@
   "email_login": "Email bạn dùng để đăng nhập",
   "active_key": "Khóa kích hoạt",
   "active_key_description": "Nhập mã kích hoạt cho email",
-  "get_acitve_key": "Nhận khóa kích hoạt"
+  "get_acitve_key": "Nhận khóa kích hoạt",
+  "password": "Mật khẩu"
 }
